# scraper

./: README.md  Webscrape_P_Tags.py  main.py  pyproject.toml
