[tool.poetry]
name = "scraper"
version = "0.1.0"
description = "webscraper for hamel"
authors = ["Faz-24"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-docx = "^1.1.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
